# CS5220Project

./: CMakeLists.txt  common.h  dgemm-naive.c  gpu.cu  job-gpu  job-naive  job-openmp  job-serial  main.cpp  main.cu  naive.cpp  openmp.cpp  serial.cpp
